--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+
+api:
+  client:
+    base-url: ${BASE_URL}
+    api-key: ${API_KEY}
