--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-DB_HOST=covid_db
-DB_USER=*************
-DB_PASSWORD=*************
+DB_NAME=****************
+DB_HOST=****************
+DB_USER=****************
+DB_PASSWORD=****************
+BASE_URL=****************
+API_KEY=****************
