--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,27 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=${DB_HOST}
+      - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
+    networks:
+      - covid-network
+
+  api:
+    container_name: covid-benchmark-api
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_USERNAME=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - BASE_URL=${BASE_URL}
+      - API_KEY=${API_KEY}
+    depends_on:
+      - db
     networks:
       - covid-network
 
