feat: Add Swagguer documentation

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -17,3 +17,9 @@ api:
   client:
     base-url: ${BASE_URL}
     api-key: ${API_KEY}
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /docs.html
